--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         }
     </style>
     <a href="task1/index.html" class ="btn1">Labor 1</a>
+    <a href="task2/index.html" class ="btn1.2">Labor 1.2</a>
     <a href="" class ="btn2">Labor 2</a>
 </body>
 
 </html> 
+
