--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
             background: url("image/adrienolichon.jpg");
         }
     </style>
-    <a href="" class ="btn1">Labor 1</a>
-    <a href="" class ="btn2">Labor 1.2</a>
+    <a href="task1/index.html" class ="btn1">Labor 1</a>
+    <a href="task2/index.html" class ="btn2">Labor 1.2</a>
     <a href="" class ="btn3">Labor 2</a>
 </body>
+
 </html> 
