--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     </style>
     <a href="task1/index.html" class ="btn1">Labor 1</a>
     <a href="task2/index.html" class ="btn2">Labor 1.2</a>
-    <a href="" class ="btn3">Labor 2</a>
+    <a href="Lr2/index.html" class ="btn3">Labor 2</a>
 </body>
 
 </html> 
+
