--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
 <body>
-    <h1>Resume</h1>
+    <img src="image/me.jpg" alt="photograph" class="avatar">
+    <h1 class="title">Resume</h1>
     <style>
         body{
             background: url("image/adrienolichon.jpg");
@@ -19,3 +20,4 @@
 </body>
 
 </html> 
+
