--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Резюме веб-розробника">
     <meta name="author" content="Мислюк Олександр">
     <title>Resume</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
 <body>
     <style>
@@ -126,3 +126,4 @@
 </body>
 
 </html>
+
