--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#experience">Досвід</a></li>
                 <li><a href="#education">Освіта</a></li>
                 <li><a href="#contacts">Контакти</a></li>
-                <li><a href="Portfolio.html">Завдання</a></li>
+                <li><a href="/Portfolio/Portfolio.html">Завдання</a></li>
             </ul>
         </nav>
     </header>
@@ -126,4 +126,5 @@
 </body>
 
 </html>
+
 
