--- a/Portfolio.html
+++ b/Portfolio.html
@@ -14,8 +14,9 @@
             background: url("image/adrienolichon.jpg");
         }
     </style>
-    <a href="" class ="btn1">Labor 1</a>
+    <a href="task1/index.html" class ="btn1">Labor 1</a>
     <a href="" class ="btn2">Labor 1.2</a>
     <a href="" class ="btn3">Labor 2</a>
 </body>
+
 </html> 
