--- a/Portfolio.html
+++ b/Portfolio.html
@@ -15,9 +15,10 @@
         }
     </style>
     <a href="task1/index.html" class ="btn1">Labor 1</a>
-    <a href="task2/indext.html" class ="btn2">Labor 1.2</a>
+    <a href="task2/index.html" class ="btn2">Labor 1.2</a>
     <a href="Lr2/index.html" class ="btn3">Labor 2</a>
 </body>
 
 </html> 
+
 
